--- a/index.html
+++ b/index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Document</title>
 </head>
+
 <body>
-    
 
-    <input type="text" name="age" id="age" value="age">
-    <input type="text" name="km" id="km" value="km da percorrere">
+    <h1>Calcola il prezzo del biglietto</h1>
+    <input type="text" placeholder="Age" id="age" value="">
+    <input type="text" placeholder="Km" id="km" value="">
+    <input type="text" placeholder="Nome e Cognome" id="full_name">
     <button>submit</button>
+    <div id="valor"></div>
 
 
-    
-<script src="./assets/js/main.js"></script>
+
+    <script src="./assets/js/main.js"></script>
 </body>
+
 </html>
