--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
 <body>
 
     <h1>Calcola il prezzo del biglietto</h1>
-    <input type="text" placeholder="Age" id="age" value="">
-    <input type="text" placeholder="Km" id="km" value="">
-    <input type="text" placeholder="Nome e Cognome" id="full_name">
-    <button>submit</button>
-    <div id="valor"></div>
-
+    <div class="input">
+        <input type="text" placeholder="Age" id="age" value="">
+        <input type="text" placeholder="Km" id="km" value="">
+        <input type="text" placeholder="Nome e Cognome" id="full_name">
+        <button>submit</button>
+    </div>
+    <h4 style="text-align: center; text-decoration: underline;"> Costo biglietto</h4>
+    <div id="valor" style="text-align: center;"></div>
 
 
     <script src="./assets/js/main.js"></script>
