--- a/index.html
+++ b/index.html
@@ -17,8 +17,15 @@
         <input type="text" placeholder="Nome e Cognome" id="full_name">
         <button>submit</button>
     </div>
-    <h4 style="text-align: center; text-decoration: underline;"> Costo biglietto</h4>
-    <div id="valor" style="text-align: center;"></div>
+    <!-- <h4 style="text-align: center; text-decoration: underline;"> Costo biglietto</h4> -->
+    <h2 style="text-align: center;">Dettaglio Passeggero</h2>
+    <div class="container">
+        <h3>Nome e Cognome</h3>
+        <div id="name"></div>
+        <h3 style="margin-top: 3rem;">Costo del biglietto</h3>
+        <div id="valor"></div>
+    </div>
+
 
 
     <script src="./assets/js/main.js"></script>
